--- a/definir.html
+++ b/definir.html
@@ -6,8 +6,13 @@
   </head>
   <body>
     Te amo, minha vida!
-    Feliz aniversário de namoro, meu amor! Ou pelo menos 80% dele. O bilhetinho hoje é diferente, mais tecnológico
-    Bom descanso, minha gata! Come alguma coisa, fica tranquila, relaxaaaa muitoooo Boa semana para nós, que seja muito boa! Obrigado muito muito muito obrigadoooooooooooooooooo por esses quase 100% de 2 anos de namoro.
+    Feliz aniversário de namoro, meu amor! Ou pelo menos 80% dele. 
+    O bilhetinho hoje é diferente, mais tecnológico
+    Bom descanso, minha gata! 
+    Come alguma coisa, fica tranquila, relaxaaaa muitoooo 
+    Boa semana para nós, que seja muito boa! Obrigado muito muito muito por esses quase 100% de 2 anos de namoro.
+    Sdds já, minha pivete!
+    
     Pq tudo isso? E não um bilhete de papel? Te conto a noite qui qui qui
   </body>
 </html>
