--- a/definir.html
+++ b/definir.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Namoridos</title>
+    <title>
+      Namoridos
+    </title>
     <meta charset="utf-8">
   </head>
   <body>
